# plan-scraper

./: Cargo.toml  README.md
src/: class.rs  consts.rs  course.rs  helpers.rs  lib.rs  main.rs
src/university/: mod.rs
