[package]
name = "kfu-reg-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
select =  "0.5.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# for matching files in dirs 
glob = "0.3.0"
# for errors (duh)
custom_error = "1.9.2"

# for them duplicates
itertools = "0.10.2"
